--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- makeTagid  -->
+    <!-- 'closeApp' for Close Button -->
+    <!-- 'minApp' for miniSize Button -->
+    <!-- 'full-App' for FullSize Button -->
+    <!-- 'reload' for Reload Page Button -->
     <div class="all">
         <iframe src="ลิงค์ของคุณที่นี่" ></iframe>
     </div>
