--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- 'full-App' for FullSize Button -->
     <!-- 'reload' for Reload Page Button -->
     <div class="all">
+        <!--  your web link in SRC -->
         <iframe src="ลิงค์ของคุณที่นี่" ></iframe>
     </div>
     <script src="./renderer.js"></script>
