--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     
         <!--  your web link in SRC -->
         <iframe src="ลิงค์ของคุณที่นี่" ></iframe>
-    <script src="./renderer.js"></script>
+    <script src="../renderer.js"></script>
     <script>
         const reBtn = document.getElementById('reload')
         reBtn.addEventListener('click',()=>{
