--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,6 @@
         </div>
         <iframe src="https://harmonious-tapioca-fa4dfb.netlify.app/" ></iframe>
     <script src="../renderer.js"></script>
-    <script>
-        const reBtn = document.getElementById('reload')
-        reBtn.addEventListener('click',()=>{
-            location.reload()
-        })
-    </script>
+    <script src="./script.js"></script>
 </body>
 </html>
